Feat: Adds GPU Support to Noetic

--- a/src/noetic/.devcontainer/devcontainer.json
+++ b/src/noetic/.devcontainer/devcontainer.json
@@ -33,6 +33,8 @@
 		"-v", "${env:HOME}/.Xauthority:/home/rosuser/.Xauthority",
 
 		"--device", "/dev/snd",
+		"--device", "/dev/dri",
+		"--gpus", "all",
 
 		"--network", "host"
 	],
