--- a/src/noetic/devcontainer-template.json
+++ b/src/noetic/devcontainer-template.json
@@ -4,7 +4,7 @@
     "name": "ROS Noetic Devcontainer Workspace Template",
     "description": "A template to code robots using ROS Noetic Distribution",
     "documentationUrl": "https://github.com/JuanCSUCoder/ros-devcontainers/tree/main/src/noetic",
-    "publisher": "Dev Container Spec Maintainers",
+    "publisher": "Juan Camilo Sánchez Urrego",
     "licenseURL": "https://github.com/JuanCSUCoder/ros-devcontainers/blob/main/LICENSE",
     "options": [],
     "platforms": [
