Fix: Remove Privileged Requirement for Rootless Containers

--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "ROS 2 Development Container",
-    "privileged": true,
+    // "privileged": true,
     "remoteUser": "rosuser",
     "build": {
         "dockerfile": "Dockerfile",
