Fix: Podman UserID

--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -28,6 +28,9 @@
         "ROS_DOMAIN_ID": "42"
     },
     "runArgs": [
+        // UNCOMMENT for Podman
+        "--userns=keep-id",
+
         "--network", "host",
 
         "-e", "DISPLAY=${env:DISPLAY}",
@@ -42,5 +45,5 @@
         "source=/dev/snd,target=/dev/snd,type=bind,consistency=cached",
         "source=${env:HOME}/.Xauthority,target=/home/rosuser/.Xauthority,type=bind"
     ],
-    "postCreateCommand": "rosdep update && rosdep install --from-paths src --ignore-src -y && sudo chown -R rosuser /home/ws/"
+    "postCreateCommand": "rosdep update && rosdep install --from-paths src --ignore-src -y"
 }
