Fix: Adds groups for video and audio

--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -36,6 +36,9 @@
 
         "-e", "DISPLAY=${env:DISPLAY}",
 
+        "--group-add", "video",
+        "--group-add", "audio",
+
         "--device", "/dev/snd",
 		"--device", "/dev/dri",
 		"--gpus", "all"
