--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -41,7 +41,7 @@
 
         "--device", "/dev/snd",
 		"--device", "/dev/dri",
-		"--gpus", "all"
+		// "--gpus", "all"
     ],
     "mounts": [
         "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached",
