Feat: Adds MoveIt and Gazebo

--- a/src/humble/.devcontainer/Dockerfile
+++ b/src/humble/.devcontainer/Dockerfile
@@ -16,6 +16,15 @@ RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y python3-pip
 ENV SHELL /bin/bash
 
+# Install MoveIt
+RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-moveit
+
+# Install Gazebo
+RUN apt-get update && apt-get install -y lsb-release wget gnupg
+RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null
+RUN apt-get update && apt-get install -y gz-garden
+
 # ********************************************************
 # * Anything else you want to do like clean up goes here *
 # ********************************************************
