--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,9 @@
 name: "Release Dev Container Templates & Generate Documentation"
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - "main"
 
 jobs:
   deploy:
