--- a/src/indigo/.devcontainer/Dockerfile
+++ b/src/indigo/.devcontainer/Dockerfile
@@ -20,12 +20,11 @@ ENV SHELL /bin/bash
 RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-moveit
 
 # Install Gazebo
-RUN apt-get update && apt-get install -y lsb-release wget gnupg
-RUN apt-get update && apt-get install -y ca-certificates
-RUN sed '/DST_Root_CA_X3.crt/d' /etc/ca-certificates.conf > /tmp/cacerts.conf && mv /tmp/cacerts.conf /etc/ca-certificates.conf
-RUN update-ca-certificates --fresh && wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg
-RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null
-RUN apt-get update && apt-get install -y gazebo11
+RUN apt-get update && apt-get install -y lsb-release wget gnupg2 dirmngr lsb-release
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
+RUN . /etc/os-release \
+    && echo "deb http://packages.osrfoundation.org/gazebo/$ID-stable `lsb_release -sc` main" > /etc/apt/sources.list.d/gazebo-latest.list
+RUN apt-get update && apt-get install -y gazebo6 libgazebo6 gazebo6-common gazebo6-plugin-base
 
 # ********************************************************
 # * Anything else you want to do like clean up goes here *
