Feat: Adds docker extension to Humble

--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
                 "twxs.cmake",
                 "donjayamanne.python-extension-pack",
                 "eamodio.gitlens",
-                "ms-iot.vscode-ros"
+                "ms-iot.vscode-ros",
+                "ms-azuretools.vscode-docker"
             ]
         }
     },
