--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
                 "donjayamanne.python-extension-pack",
                 "eamodio.gitlens",
                 "ms-iot.vscode-ros",
-                "ms-azuretools.vscode-docker"
+                "ms-azuretools.vscode-docker",
+                "ms-vscode.cmake-tools"
             ]
         }
     },
