Fix: Gazebo Version for Humble

--- a/src/humble/.devcontainer/Dockerfile
+++ b/src/humble/.devcontainer/Dockerfile
@@ -16,17 +16,17 @@ RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y python3-pip
 ENV SHELL /bin/bash
 
+# Configure Colcon Mixin
+RUN colcon mixin remove default
+RUN colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
+RUN colcon mixin update default
+
 # Install MoveIt
 RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-moveit
 RUN apt-get update && apt-get install -y python3-colcon-common-extensions python3-colcon-mixin
-# RUN colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
-RUN colcon mixin update default
 
 # Install Gazebo
-RUN apt-get update && apt-get install -y lsb-release wget gnupg
-RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg
-RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null
-RUN apt-get update && apt-get install -y gz-garden
+RUN apt-get update && apt-get install -y ros-humble-ros-gz
 
 # ********************************************************
 # * Anything else you want to do like clean up goes here *
