--- a/src/humble/.devcontainer/devcontainer.json
+++ b/src/humble/.devcontainer/devcontainer.json
@@ -9,8 +9,8 @@
             "USERNAME": "rosuser"
         }
     },
-    "workspaceFolder": "/home/ws",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/home/ws,type=bind",
+    "workspaceFolder": "/home/rosuser/ws",
+    "workspaceMount": "source=${localWorkspaceFolder},target=/home/rosuser/ws,type=bind",
     "customizations": {
         "vscode": {
             "extensions": [
@@ -42,7 +42,7 @@
         "--group-add", "audio",
 
         "--device", "/dev/snd",
-		"--device", "/dev/dri",
+		"--device", "/dev/dri"
 		// "--gpus", "all"
     ],
     "mounts": [
