Fix: Error Message when the workspace hasnt been built

--- a/src/humble/.devcontainer/Dockerfile
+++ b/src/humble/.devcontainer/Dockerfile
@@ -38,7 +38,7 @@ RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-rmw-cyclonedds-cpp
 # Configure User
 USER $USERNAME
 RUN echo "source /opt/ros/humble/setup.bash" >> /home/rosuser/.bashrc
-RUN echo "source /home/rosuser/ws/install/setup.bash || echo Workspace not Ready" >> /home/rosuser/.bashrc
+RUN echo "source /home/rosuser/ws/install/setup.bash > /dev/null || echo 'Workspace not Ready. Run colcon build at /home/rosuser/ws'" >> /home/rosuser/.bashrc
 RUN echo "export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp" >> /home/rosuser/.bashrc
 RUN echo "export TURTLEBOT3_MODEL=waffle" >> /home/rosuser/.bashrc
 RUN echo "export GAZEBO_MODEL_PATH=$GAZEBO_MODEL_PATH:/opt/ros/$ROS_DISTRO/share/turtlebot3_gazebo/models" >> /home/rosuser/.bashrc
