Feat: Install TurtleBot3

--- a/src/humble/.devcontainer/Dockerfile
+++ b/src/humble/.devcontainer/Dockerfile
@@ -31,6 +31,9 @@ RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-ros-gz
 # Setup CycloneDDS
 RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-rmw-cyclonedds-cpp
 
+# Install TurtleBot3
+RUN apt-get update && apt-get install -y ros-$ROS_DISTRO-turtlebot3*
+
 # ********************************************************
 # * Anything else you want to do like clean up goes here *
 # ********************************************************
