--- a/src/humble_amd/devcontainer-template.json
+++ b/src/humble_amd/devcontainer-template.json
@@ -1,7 +1,7 @@
 {
-    "id": "humble",
-    "version": "0.1.1",
-    "name": "ROS2 Humble Devcontainer Workspace Template",
+    "id": "humble_amd",
+    "version": "1.0.0",
+    "name": "ROS2 Humble Devcontainer Workspace Template with AMD Graphics",
     "description": "A template to code robots using ROS2 Humble Distribution",
     "documentationUrl": "https://github.com/JuanCSUCoder/ros-devcontainers/tree/main/src/humble",
     "publisher": "Juan Camilo Sánchez Urrego",
